--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,52 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+  <header>
+   <nav class="navbar navbar-expand-lg navbar-dark bg-white border border-dark">
+      <a class="navbar-brand" href="/"><i class="fa-solid fa-cake-candles" style="color: #ffef3d;">SportsMeet</i></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav ml-auto">
+
+         <% if user_signed_in? %>
+          <li>
+            <%= link_to user_mypage_path, class: "nav-link text-dark" do %>
+             マイページ
+            <% end %>
+          </li>
+          <li>
+            <%= link_to destroy_user_session_path, method: :delete, class: "nav-link text-dark" do %>
+             ログアウト
+            <% end %>
+          </li>
+
+         <% elsif admin_signed_in? %>
+          <li>
+            <%= link_to destroy_admin_session_path, method: :delete, class: "nav-link text-dark" do %>
+             ログアウト
+            <% end %>
+          </li>
+
+         <% else %>
+          <li>
+            <%= link_to new_user_registration_path, class: "nav-link text-dark" do %>
+             新規登録
+            <% end %>
+          </li>
+          <li>
+            <%= link_to new_user_session_path, class: "nav-link text-dark" do %>
+             ログイン
+            <% end %>
+          </li>
+        <% end %>
+        </ul>
+      </div>
+
+  </header>
+
   <body>
     <%= yield %>
   </body>
