User 新規登録、ログイン

--- a/app/views/public/events/new.html.erb
+++ b/app/views/public/events/new.html.erb
@@ -26,7 +26,7 @@
        興味のある種目 ※任意選択・複数回答
       </div>
       <div class="col-sm-8">
-       <%= f.collection_check_boxes :category_id, Category.all, :id, :name %>
+       <%= f.collection_check_boxes :user_interest_id, Category.all, :id, :name %>
       </div>
      </div>
 
