--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
  <div class="col-sm-2 mt-4 ml-3 text-center table-secondary">新規ユーザー登録</div>
-  <%= form_with model: @user, url: user_registration_path do |f| %>
+  <%= form_with model: @user, url: user_registration_path, method: :post do |f| %>
    <%= render "public/shared/error_messages", resource: resource %>
     <div class="mt-4">
 
@@ -27,7 +27,7 @@
        性別
       </div>
       <div class="col-sm-8">
-       <%= f.select :address, User.genders.keys, {} %>
+       <%= f.select :gender, User.genders_i18n.invert, {} %>
       </div>
      </div>
 
@@ -91,7 +91,7 @@
        都道府県
       </div>
       <div class="col-sm-8">
-       <%= f.select :prefecture_id, Prefecture.names.keys, {} %>
+       <%= f.select :prefecture_id, Prefecture.names %>
       </div>
      </div>
 
@@ -109,7 +109,7 @@
        興味のある種目 ※任意選択・複数回答
       </div>
       <div class="col-sm-8">
-       <%= f.collection_check_boxes :user_interest_id, Category.all, :id, :name %>
+       <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
       </div>
      </div>
 
