--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -42,7 +42,7 @@
 
   <div class="row border border-dark" style="height: 40px;">
    <div class="col-6 col-sm-2 table-secondary d-flex align-items-center">都道府県</div>
-   <div class="col-6 col-sm-4 d-flex align-items-center"><%= @user.prefecture_id %></div>
+   <div class="col-6 col-sm-4 d-flex align-items-center"><%= Prefecture.names.invert[@user.prefecture_id] %></div>
   </div>
 
   <div class="row border border-dark" style="height: 40px;">
@@ -50,13 +50,19 @@
    <div class="col-6 col-sm-4 d-flex align-items-center"><%= @user.address %></div>
   </div>
 
-  <% @user.categories.each do |category| %>
+  <% @user.user_interests.each do |ui| %>
   <div class="row border border-dark" style="height: 40px;">
    <div class="col-6 col-sm-2 table-secondary d-flex align-items-center">興味のある競技</div>
-   <div class="col-6 col-sm-4 d-flex align-items-center"><% category.name %></div>
+   <div class="col-6 col-sm-4 d-flex align-items-center"><%= ui.category.name %></div>
   </div>
   <% end %>
 
 <%#ユーザーの関心も表示させる%>
+
+ <% if @user.group.blank? %>
+  個人
+ <% else %>
+  <%= @user.group %>
+ <% end %>
 
 </div>
