--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -6,7 +6,7 @@
     <h4 class="font-weight-bold">登録情報</h4>
    </div>
    <div class="col">
-    <%#= link_to "編集する",admin_users_index_path, class: "btn btn-success" %>
+    <%= link_to "編集する",admin_edit_path(@user.id), class: "btn btn-success" %>
    </div>
   </div>
 
