--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -23,6 +23,15 @@
 
      <div class="row mt-2">
       <div class="col-sm-4">
+       お写真
+      </div>
+      <div class="col-sm-8">
+       <%= f.file_field :image, accept: "image/*" %>
+      </div>
+     </div>
+
+     <div class="row mt-2">
+      <div class="col-sm-4">
        性別
       </div>
       <div class="col-sm-8">
