--- a/app/views/public/events/show.html.erb
+++ b/app/views/public/events/show.html.erb
@@ -42,4 +42,22 @@
      </div>
     </div>
   </div>
+
+  <div class="mt-4">
+   <p>コメント件数:<%= @event.comments.count %></p>
+   <% @event.comments.each do |comment| %>
+    <p><%= image_tag comment.user.get_image(100,100) %></p>
+    <%= comment.user.full_name %>
+    <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.comment %>
+    <% if comment.user == current_user %>
+     <%= link_to "削除", event_comment_path(comment.event, comment), method: :delete %>
+    <% end %>
+   <% end %>
+  </div>
+  <div class="mt-4">
+   <%= form_with model: [@event, @comment] do |f| %>
+    <%= f.text_area :comment, rows: '5', placeholder: "コメントしてください" %>
+    <%= f.submit "投稿する" %>
+   <% end %>
+  </div>
 </div>
