Event　検索 & User お気に入り & Rservation　一覧、削除

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,9 +28,9 @@
             <% end %>
           </li>
           <li>
-            <%#= link_to user_favorite_path, class: "nav-link text-dark" do %>
+            <%= link_to user_favorite_path, class: "nav-link text-dark" do %>
              お気に入りイベント
-            <%# end %>
+            <% end %>
           </li>
           <li>
             <%= link_to user_mypage_path, class: "nav-link text-dark" do %>
