--- a/app/views/public/reservations/show.html.erb
+++ b/app/views/public/reservations/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
- <div class="col-sm-2 mt-4 ml-3 text-center table-secondary">イベント一覧</div>
+ <div class="col-sm-2 mt-4 ml-3 text-center table-secondary">予約イベント</div>
   <div class="mt-4">
     <div class="mt-2">
      <div class="row mt-2">
@@ -39,27 +39,9 @@
          <% end %>
         </div>
         <div class="ml-1 mt-1">
-        <%= link_to '予約する', new_event_reservation_path(@event.id) %>
+        <%= link_to '取り消す', event_reservation_path(@event, @reservation), method: :delete %>
        </div>
      </div>
     </div>
-  </div>
-
-  <div class="mt-4">
-   <p>コメント件数:<%= @event.comments.count %></p>
-   <% @event.comments.each do |comment| %>
-    <p><%= image_tag comment.user.get_image(100,100) %></p>
-    <%= comment.user.full_name %>
-    <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.comment %>
-    <% if comment.user == current_user %>
-     <%= link_to "削除", event_comment_path(comment.event, comment), method: :delete %>
-    <% end %>
-   <% end %>
-  </div>
-  <div class="mt-4">
-   <%= form_with model: [@event, @comment] do |f| %>
-    <%= f.text_area :comment, rows: '5', placeholder: "コメントしてください" %>
-    <%= f.submit "投稿する" %>
-   <% end %>
   </div>
 </div>
