--- a/app/views/public/users/favorite.html.erb
+++ b/app/views/public/users/favorite.html.erb
@@ -1,28 +1,28 @@
 <div class="container">
  <div class="col-sm-2 mt-4 ml-3 text-center table-secondary">お気に入り一覧</div>
   <div class="mt-4">
-    <% if @events.any? %>
-     <% @events.each do |event| %>
+    <% if @user_favorites.any? %>
+     <% @user_favorites.each do |uf| %>
 
       <div class="mt-2">
        <div class="row mt-2">
         <div>写真</div>
         <div class="ml-2">
-          <div class="ml-1 mt-1"><%= link_to event.name, event_path(event.id) %></div>
-          <div class="ml-1 mt-1"><%= event.date %></div>
-          <div class="ml-1 mt-1"><%= event.number %>人</div>
-          <div class="ml-1 mt-1"><%= event.fee %>円</div>
-          <div class="ml-1 mt-1"><%= event.how_to_pay_i18n %></div>
+          <div class="ml-1 mt-1"><%= link_to uf.event.name, event_path(uf.event.id) %></div>
+          <div class="ml-1 mt-1"><%= uf.event.date %></div>
+          <div class="ml-1 mt-1"><%= uf.event.number %>人</div>
+          <div class="ml-1 mt-1"><%= uf.event.fee %>円</div>
+          <div class="ml-1 mt-1"><%= uf.event.how_to_pay_i18n %></div>
         </div>
        </div>
        <div class="text-center">
-         <% event.event_categories.each do |ec| %>
-         <div class="ml-1 mt-1"><%= ec.category.name %></div>
+         <% uf.event.categories.each do |category| %>
+           <div class="ml-1 mt-1"><%= category.name %></div>
          <% end %>
-         <div class="ml-1 mt-1"><%= event.outline %></div>
-         <div class="ml-1 mt-1"><%= Prefecture.names.invert[event.prefecture_id] %></div>
-         <div class="ml-1 mt-1"><%= event.place %></div>
-         <div class="ml-1 mt-1"><%= link_to "編集", edit_event_path(event.id), class: "btn btn-success" %></div>
+         <div class="ml-1 mt-1"><%= uf.event.outline %></div>
+         <div class="ml-1 mt-1"><%= Prefecture.names.invert[uf.event.prefecture_id] %></div>
+         <div class="ml-1 mt-1"><%= uf.event.place %></div>
+         <div class="ml-1 mt-1"><%= link_to "編集", edit_event_path(uf.event.id), class: "btn btn-success" %></div>
        </div>
       </div>
 
