Event レイアウト

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,8 @@
   </head>
 
   <header>
-   <nav class="navbar navbar-expand-lg navbar-dark bg-white border border-dark">
-      <a class="navbar-brand" href="/"><i class="fa-solid fa-cake-candles" style="color: #ffef3d;">SportsMeet</i></a>
+   <nav class="navbar navbar-expand-lg navbar-dark border border-dark" style="background-color: #33FF66;">
+      <a class="navbar-brand" href="/"><i class="fa-solid fa-person-running" style="color: #000000;">SportsMeet</i></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -70,4 +70,14 @@
   <body>
     <%= yield %>
   </body>
+
+  <footer>
+    <div class='mt-5' style="height:70px; background-color: #33FF66;">
+      <div class='row border-dark border-top'>
+        <div>
+        </div>
+      </div>
+    </div>
+  </footer>
+
 </html>
