--- a/app/views/public/events/result.html.erb
+++ b/app/views/public/events/result.html.erb
@@ -1,34 +1,49 @@
 <div class="container">
- <div class="col-sm-2 mt-4 ml-3 text-center table-secondary">検索結果</div>
+   <div class="mt-5 ml-3 text-center"><h4>検索結果</h4></div>
 
   <div class="mt-4">
    <% if @events.any?%>
     <% @events.each do |event| %>
 
-     <div class="mt-2">
-      <div class="row mt-2">
-        <div>写真</div>
-       <div class="ml-2">
-        <div class="ml-1 mt-1"><%= event.name %></div>
-        <div class="ml-1 mt-1"><%= event.date %></div>
-        <div class="ml-1 mt-1"><%= event.number %>人</div>
-        <div class="ml-1 mt-1"><%= event.fee %>円</div>
-        <div class="ml-1 mt-1"><%= event.how_to_pay_i18n %></div>
-       </div>
-      </div>
-      <div class="text-center">
-        <% event.event_categories.each do |ec| %>
-       <div class="ml-1 mt-1"><%= ec.category.name %></div>
-        <% end %>
-       <div class="ml-1 mt-1"><%= event.outline %></div>
-       <div class="ml-1 mt-1"><%= Prefecture.names.invert[event.prefecture_id] %></div>
-       <div class="ml-1 mt-1"><%= event.place %></div>
-      </div>
+   <div class="container mt-4">
+     <div class="row justify-content-center">
+       <% @events.each do |event| %>
+         <div class="col-md-8 mt-4">
+           <div class="row">
+             <div class="col-md-4">
+               <%= link_to event_path(event.id) do %>
+                 <% if event.image.attached? %>
+                   <%= image_tag event.image, size: "250x250" %>
+                 <% else %>
+                   <%= image_tag 'no_image', size: "250x250" %>
+                 <% end %>
+               <% end %>
+             </div>
+             <div class="col-md-8">
+               <div class="ml-1 mt-1"><%= link_to event.name, event_path(event.id) %></div>
+               <% event.event_categories.each do |ec| %>
+                 <div class="ml-1 mt-1"><%= ec.category.name %></div>
+               <% end %>
+               <div class="ml-1 mt-1">開催日時：<%= event.date %></div>
+               <div class="ml-1 mt-1">募集人数：<%= event.number %>人</div>
+               <div class="ml-1 mt-1">開催地：<%= Prefecture.names.invert[event.prefecture_id] %></div>
+               <div class="ml-1 mt-1"><イベント概要><br>
+                 <% if event.outline.length > 40 %>
+                   <%= event.outline[0, 40] + "..." %>
+                 <% else %>
+                   <%= event.outline %>
+                 <% end %>
+               </div>
+             </div>
+           </div>
+         </div>
+       <% end %>
      </div>
+   </div>
 
     <% end %>
    <% else %>
-    <p>該当するイベントは見つかりませんでした。</p>
+    <div class="mt-5 ml-3 text-center"><h6>該当するイベントは見つかりませんでした。</h4></div>
    <% end %>
   </div>
 </div>
