--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,15 @@
 
   <header>
    <nav class="navbar navbar-expand-lg navbar-dark border border-dark" style="background-color: #33FF66;">
-      <a class="navbar-brand" href="/"><i class="fa-solid fa-person-running" style="color: #000000;">SportsMeet</i></a>
+      <% if user_signed_in? %>
+       <%= link_to events_path, class: "navbar-brand" do %>
+        <i class="fa-solid fa-person-running" style="color: #000000;">SportsMeet</i>
+       <% end %>
+      <% else %>
+       <%= link_to root_path, class: "navbar-brand" do %>
+        <i class="fa-solid fa-person-running" style="color: #000000;">SportsMeet</i>
+       <% end %>
+      <% end %>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -52,13 +60,8 @@
 
          <% else %>
           <li>
-            <%= link_to new_user_registration_path, class: "nav-link text-dark" do %>
-             新規登録
-            <% end %>
-          </li>
-          <li>
-            <%= link_to new_user_session_path, class: "nav-link text-dark" do %>
-             ログイン
+            <%= link_to events_path, class: "nav-link text-dark" do %>
+             イベント一覧
             <% end %>
           </li>
         <% end %>
@@ -73,9 +76,7 @@
 
   <footer>
     <div class='mt-5' style="height:70px; background-color: #33FF66;">
-      <div class='row border-dark border-top'>
-        <div>
-        </div>
+      <div class='border-dark border-top'>
       </div>
     </div>
   </footer>
