--- a/app/views/public/events/edit.html.erb
+++ b/app/views/public/events/edit.html.erb
@@ -14,6 +14,15 @@
 
      <div class="row mt-2">
       <div class="col-sm-4">
+       会場イメージ
+      </div>
+      <div class="col-sm-8">
+       <%= f.file_field :image, accept: "image/*" %>
+      </div>
+     </div>
+
+     <div class="row mt-2">
+      <div class="col-sm-4">
        概要
       </div>
       <div class="col-sm-8">
