--- a/app/views/public/homes/index.html.erb
+++ b/app/views/public/homes/index.html.erb
@@ -1,2 +1,20 @@
-<h1>Public::Homes#index</h1>
-<p>Find me in app/views/public/homes/index.html.erb</p>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6 text-center">
+            <h1>SportsMeet</h1>
+            <p>スポーツをしたい人にイベント参加のきっかけを作る<br>「イベント」と「人」の『逆オファー型イベント予約サイト』です。</p>
+        </div>
+    </div>
+    <div class="row justify-content-center mt-4">
+        <div class="col-md-6 text-center">
+            <div class="row">
+                <div class="col-md-6 mb-2">
+                    <%= link_to "ログインの方はこちら", new_user_session_path, class: "btn btn-primary btn-lg btn-block" %>
+                </div>
+                <div class="col-md-6">
+                    <%= link_to "新規登録の方はこちら", new_user_registration_path, class: "btn btn-success btn-lg btn-block" %>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
