--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,155 +1,97 @@
 <div class="container">
- <div class="col-sm-2 mt-4 ml-3 text-center table-secondary">新規ユーザー登録</div>
-  <%= form_with model: @user, url: user_registration_path, method: :post do |f| %>
-   <%= render "public/shared/error_messages", resource: resource %>
-    <div class="mt-4">
-
-     <div class="row mt-2">
-      <div class="col">
-       お写真
-      </div>
-      <div class="col">
-       <%= f.file_field :image, accept: "image/*" %>
-      </div>
-      <div class="col">
-      </div>
-     </div>
-
-     <div class="row">
-      <div class="col-sm-3">
-       お名前
-      </div>
-      <div class="col-sm-1">
-       （姓）
-      </div>
-      <div class="col-sm-3">
-       <%= f.text_field :last_name %>
-      </div>
-      <div class="col-sm-1">
-       （名）
-      </div>
-      <div class="col">
-       <%= f.text_field :first_name %>
-      </div>
-     </div>
-
-     <div class="row mt-2">
-      <div class="col-sm-4">
-       性別
-      </div>
-      <div class="col-sm-8">
-       <%= f.select :gender, User.genders_i18n.invert, {} %>
-      </div>
-     </div>
-
-     <div class="row mt-2">
-      <div class="col-sm-4">
-       生年月日
-      </div>
-      <div class="col-sm-8">
-       <%= f.date_select :birthday, { start_year: 1950, end_year: 2020,
-                                      include_blank: true,
-                                      use_two_digit_numbers: true } %>
-      </div>
-     </div>
-
-     <div class="row mt-2">
-      <div class="col">
-       団体名
-      </div>
-      <div class="col">
-       <%= f.text_field :group %>
-      </div>
-      <div class="col">
-      </div>
-     </div>
-
-     <div class="row mt-2">
-      <div class="col">
-       メールアドレス
-      </div>
-      <div class="col">
-       <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-      </div>
-      <div class="col">
-      </div>
-     </div>
-
-     <div class="row mt-2">
-      <div class="col">
-       電話番号（ハイフンなし）
-      </div>
-      <div class="col">
-       <%= f.text_field :phone_number %>
-      </div>
-      <div class="col">
-      </div>
-     </div>
-
-     <div class="row mt-2">
-      <div class="col">
-       郵便番号（ハイフンなし）
-      </div>
-      <div class="col">
-       <%= f.text_field :postal_code %>
-      </div>
-      <div class="col">
-      </div>
-     </div>
-
-     <div class="row mt-2">
-      <div class="col-sm-4">
-       都道府県
-      </div>
-      <div class="col-sm-8">
-       <%= f.select :prefecture_id, Prefecture.names %>
-      </div>
-     </div>
-
-     <div class="row mt-2">
-      <div class="col-sm-4">
-       市区町村　番地　マンション等
-      </div>
-      <div class="col-sm-8">
-       <%= f.text_field :address, class: "hogehoge", size: "50x1" %>
-      </div>
-     </div>
-
-     <div class="row mt-2">
-      <div class="col-sm-4">
-       興味のある種目 ※任意選択・複数回答
-      </div>
-      <div class="col-sm-8">
-       <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
-      </div>
-     </div>
-
-     <div class="row mt-2">
-      <div class="col">
-       パスワード（６文字以上）
-      </div>
-      <div class="col">
-       <%= f.password_field :password, autocomplete: "new-password" %>
-      </div>
-      <div class="col">
-      </div>
-     </div>
-
-     <div class="row mt-2">
-      <div class="col">
-       パスワード（確認用）
-      </div>
-      <div class="col">
-        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-      </div>
-      <div class="col">
-      </div>
-     </div>
-
-     <div class="mt-3 text-center">
-      <%= f.submit "新規登録", class: "w-25 btn btn-success" %>
-     </div>
-    </div>
-  <% end %>
-   <%= render "public/shared/links" %>
+  <div class="row justify-content-center mt-4">
+    <div class="col-sm-8">
+      <div class="text-center py-2">新規ユーザー登録</div>
+      <%= form_with model: @user, url: user_registration_path, method: :post do |f| %>
+        <%= render "public/shared/error_messages", resource: resource %>
+        <div class="mt-4">
+          <div class="form-group row">
+            <label for="image" class="col-sm-3 col-form-label">お写真</label>
+            <div class="col-sm-9">
+              <%= f.file_field :image, accept: "image/*", class: "form-control" %>
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="last_name" class="col-sm-3 col-form-label">お名前（姓）</label>
+            <div class="col-sm-3">
+              <%= f.text_field :last_name, class: "form-control" %>
+            </div>
+            <label for="first_name" class="col-sm-1 col-form-label">（名）</label>
+            <div class="col-sm-5">
+              <%= f.text_field :first_name, class: "form-control" %>
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="gender" class="col-sm-3 col-form-label">性別</label>
+            <div class="col-sm-9">
+              <%= f.select :gender, User.genders_i18n.invert, {}, class: "form-control" %>
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="birthday" class="col-sm-3 col-form-label">お誕生日</label>
+            <div class="col-sm-9">
+              <%= f.date_select :birthday, { start_year: 1950, end_year: 2020, include_blank: true, use_two_digit_numbers: true } %>
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="group" class="col-sm-3 col-form-label">団体名</label>
+            <div class="col-sm-9">
+              <%= f.text_field :group %>
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="email" class="col-sm-3 col-form-label">メールアドレス</label>
+            <div class="col-sm-9">
+              <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="phone_number" class="col-sm-3 col-form-label">電話番号</label>
+            <div class="col-sm-9">
+              <%= f.text_field :phone_number %>
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="postal_code" class="col-sm-3 col-form-label">郵便番号（ハイフンなし）</label>
+            <div class="col-sm-9">
+              <%= f.text_field :postal_code%>
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="prefecture_id" class="col-sm-3 col-form-label">都道府県</label>
+            <div class="col-sm-9">
+              <%= f.select :prefecture_id, Prefecture.names %>
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="address" class="col-sm-3 col-form-label">市区町村　番地　マンション等</label>
+            <div class="col-sm-9">
+              <%= f.text_field :address, class: "hogehoge", size: "50x1" %>
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="category_ids" class="col-sm-3 col-form-label">興味のある種目 ※任意選択・複数回答</label>
+            <div class="col-sm-9">
+              <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="password" class="col-sm-3 col-form-label">パスワード</label>
+            <div class="col-sm-9">
+              <%= f.password_field :password, autocomplete: "new-password" %>
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="password_confirmation" class="col-sm-3 col-form-label">パスワード（確認用）</label>
+            <div class="col-sm-9">
+              <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+            </div>
+          </div>
+          <div class="text-center">
+            <%= f.submit "登録", class: "btn btn-success w-50" %>
+          </div>
+        </div>
+      <% end %>
+      <%= link_to "トップに戻る", root_path %>
+  </div>
 </div>
