--- a/app/views/public/reservations/show.html.erb
+++ b/app/views/public/reservations/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
- <div class="col-sm-2 mt-4 ml-3 text-center table-secondary">予約イベント</div>
+ <div class="col-sm-2 mt-4 ml-3 text-center table-secondary">予約したイベント</div>
   <div class="mt-4">
     <div class="mt-2">
      <div class="row mt-2">
@@ -40,6 +40,7 @@
         </div>
         <div class="ml-1 mt-1">
         <%= link_to '取り消す', event_reservation_path(@event, @reservation), method: :delete %>
+        </div>
        </div>
      </div>
     </div>
