--- a/app/views/public/events/index.html.erb
+++ b/app/views/public/events/index.html.erb
@@ -1,9 +1,10 @@
 <div class="container">
- <div class="mt-4 mb-3 text-center">検索</div>
+  <div class="mt-4 mb-3 text-center"><h4>イベント一覧</h4></div>
 
-   <div class="row justify-content-center">
-    <div class="col-md-5">
+  <div class="row">
+    <div class="col-md-4 mt-5">
       <div class="card">
+       <div class="card-header text-center">検索</div>
         <div class="card-body">
           <%= form_with url: event_result_path(@events), method: :get, class: "form-inline justify-content-between" do |f| %>
             <div class="form-group mb-2">
@@ -22,46 +23,43 @@
         </div>
       </div>
     </div>
-   </div>
 
-  <div class="mt-5 ml-3 text-center"><h4>イベント一覧</h4></div>
-
-   <div class="container mt-4">
-     <div class="row justify-content-center">
-       <% @events.each do |event| %>
-         <div class="col-md-8 mt-4">
-           <div class="row">
-             <div class="col-md-4">
-               <%= link_to event_path(event.id) do %>
-                 <% if event.image.attached? %>
-                   <%= image_tag event.image, size: "250x250" %>
-                 <% else %>
-                   <%= image_tag 'no_image', size: "250x250" %>
-                 <% end %>
-               <% end %>
-             </div>
-             <div class="col-md-8">
-               <div class="ml-1 mt-1"><%= link_to event.name, event_path(event.id) %></div>
-               <% event.event_categories.each do |ec| %>
-                 <div class="ml-1 mt-1"><%= ec.category.name %></div>
-               <% end %>
-               <div class="ml-1 mt-1">開催日時：<%= event.date %></div>
-               <div class="ml-1 mt-1">募集人数：<%= event.number %>人</div>
-               <div class="ml-1 mt-1">開催地：<%= Prefecture.names.invert[event.prefecture_id] %></div>
-               <div class="ml-1 mt-1"><イベント概要><br>
-                 <% if event.outline.length > 40 %>
-                   <%= event.outline[0, 40] + "..." %>
-                 <% else %>
-                   <%= event.outline %>
-                 <% end %>
-               </div>
-             </div>
-           </div>
-         </div>
-       <% end %>
-     </div>
-   </div>
-
-
+    <div class="col-md-8">
+      <div class="container mt-4">
+        <div class="row">
+          <% @events.each do |event| %>
+            <div class="col-md-12 mt-4">
+              <div class="row">
+                <div class="col-md-4">
+                  <%= link_to event_path(event.id) do %>
+                    <% if event.image.attached? %>
+                      <%= image_tag event.image, size: "250x250" %>
+                    <% else %>
+                      <%= image_tag 'no_image', size: "250x250" %>
+                    <% end %>
+                  <% end %>
+                </div>
+                <div class="col-md-8">
+                  <div class="ml-1 mt-1"><%= link_to event.name, event_path(event.id) %></div>
+                  <% event.event_categories.each do |ec| %>
+                    <div class="ml-1 mt-1"><%= ec.category.name %></div>
+                  <% end %>
+                  <div class="ml-1 mt-1">開催日時：<%= event.date %></div>
+                  <div class="ml-1 mt-1">募集人数：<%= event.number %>人</div>
+                  <div class="ml-1 mt-1">開催地：<%= Prefecture.names.invert[event.prefecture_id] %></div>
+                  <div class="ml-1 mt-1"><イベント概要><br>
+                    <% if event.outline.length > 40 %>
+                      <%= event.outline[0, 40] + "..." %>
+                    <% else %>
+                      <%= event.outline %>
+                    <% end %>
+                  </div>
+                </div>
+              </div>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
