--- a/app/views/public/reservations/new.html.erb
+++ b/app/views/public/reservations/new.html.erb
@@ -1,47 +1,71 @@
 <div class="container">
- <div class="col-sm-2 mt-4 ml-3 text-center table-secondary">イベント一覧</div>
-  <div class="mt-4">
-    <div class="mt-2">
-     <div class="row mt-2">
-      <div>写真</div>
-      <div class="ml-2">
-        <div class="ml-1 mt-1"><%= @event.name %></div>
-        <div class="ml-1 mt-1"><%= @event.date %></div>
-        <div class="ml-1 mt-1"><%= @event.number %>人</div>
-        <div class="ml-1 mt-1"><%= @event.fee %>円</div>
-        <div class="ml-1 mt-1"><%= @event.how_to_pay_i18n %></div>
+  <div class="mt-5 ml-3 text-center">
+    <h4>イベント詳細</h4>
+  </div>
+
+  <div class="container mt-4">
+    <div class="row justify-content-center">
+      <div class="col-md-8 mt-4">
+        <div class="row">
+          <!-- イベント写真 -->
+          <div class="col-md-4">
+            <% if @event.image.attached? %>
+              <%= image_tag @event.image, size: "250x250", class: "img-fluid" %>
+            <% else %>
+              <%= image_tag 'no_image', size: "250x250", class: "img-fluid" %>
+            <% end %>
+          </div>
+          <!-- イベント詳細情報 -->
+          <div class="col-md-8">
+            <div class="mt-1"><%= @event.name %></div>
+            <div class="event-categories">
+              <% @event.event_categories.each do |ec| %>
+                <div class="event-category"><%= ec.category.name %></div>
+              <% end %>
+            </div>
+            <div class="mt-1">開催日時：<%= @event.date %></div>
+            <div class="mt-1">開催地：<%= Prefecture.names.invert[@event.prefecture_id] %> <%= @event.place %></div>
+            <div class="mt-1">募集人数：<%= @event.number %>人</div>
+            <div class="mt-1">参加料金：<%= @event.fee %>円</div>
+            <div class="mt-1">お支払い方法：<%= @event.how_to_pay_i18n %></div>
+          </div>
+        </div>
+
+        <!-- イベント概要 -->
+        <div class="text-center mt-4">
+          <div class="event-outline"><概要></div>
+          <div class="mt-1"><%= @event.outline %></div>
+        </div>
       </div>
-     </div>
-     <div class="text-center">
-       <% @event.event_categories.each do |ec| %>
-       <div class="ml-1 mt-1"><%= ec.category.name %></div>
-       <% end %>
-       <div class="ml-1 mt-1"><%= @event.outline %></div>
-       <div class="ml-1 mt-1"><%= Prefecture.names.invert[@event.prefecture_id] %></div>
-       <div class="ml-1 mt-1"><%= @event.place %></div>
-       <div class="row">
-        <div class="ml-1 mt-1"><%= link_to "編集", edit_event_path(@event.id), class: "btn btn-success" %></div>
-       </div>
-     </div>
     </div>
-  </div>
 
-  <div class="mt-4">
-   <%= form_with model: @reservation, url: event_reservations_path, method: :post do |f| %>
-     <p>予約可能な人数: <%= @event.available_numbers %></p>
+    <!-- 予約フォーム -->
+    <div class="mt-4">
+      <%= form_with model: @reservation, url: event_reservations_path, method: :post do |f| %>
+        <p>予約可能な人数: <%= @event.available_numbers %></p>
 
-    <% if @event.available_numbers > 0 %>
-     <%= f.number_field :reserved_number, min: 1 %>
-     <%= f.hidden_field :event_id, value: @event.id %>
-     <%= f.hidden_field :date, value: @event.date %>
-     <%= f.submit "予約する", class: "btn btn-success" %>
-    <% else %>
-     <p>満員のため受付は終了しました。たくさんのご応募ありがとうございました。</p>
-    <% end %>
-   <% end %>
+        <% if @event.available_numbers > 0 %>
+          <div class="form-group">
+            <%= f.label :reserved_number, "予約人数" %>
+            <div class="input-group">
+              <%= f.number_field :reserved_number, min: 1, value: 1 %>
+              <div class="input-group-append">
+                <span class="input-group-text">人</span>
+              </div>
+            </div>
+          </div>
+          <%= f.hidden_field :event_id, value: @event.id %>
+          <%= f.hidden_field :date, value: @event.date %>
+          <%= f.submit "予約する", class: "btn btn-success" %>
+        <% else %>
+          <p class="text-danger">満員のため受付は終了しました。たくさんのご応募ありがとうございました。</p>
+        <% end %>
+      <% end %>
+    </div>
 
-  </div>
-  <div class="mt-4">
-   <%= link_to "戻る", events_path %>
+    <!-- 戻るボタン -->
+    <div class="mt-4">
+      <%= link_to "戻る", events_path, class: "btn btn-secondary" %>
+    </div>
   </div>
 </div>
