--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,132 +1,87 @@
 <div class="container">
- <div class="col-sm-2 mt-4 ml-3 text-center table-secondary">ユーザー編集</div>
+  <div class="mt-4 text-center">
+    <h4>ユーザー編集</h4>
+  </div>
+
   <%= form_with model: @user, url: user_information_path, method: :patch do |f| %>
     <div class="mt-4">
+      <div class="form-group row">
+        <div class="col-sm-6">
+          <label for="user_last_name">姓</label>
+          <%= f.text_field :last_name, class: "form-control", id: "user_last_name" %>
+        </div>
+        <div class="col-sm-6">
+          <label for="user_first_name">名</label>
+          <%= f.text_field :first_name, class: "form-control", id: "user_first_name" %>
+        </div>
+      </div>
 
-     <div class="row">
-      <div class="col-sm-3">
-       お名前
+      <div class="form-group row mt-2">
+        <div class="col-sm-6">
+          <label for="user_image">お写真</label>
+          <%= f.file_field :image, accept: "image/*", class: "form-control-file", id: "user_image" %>
+        </div>
+        <div class="col-sm-6">
+          <label for="user_gender">性別</label>
+          <%= f.select :gender, User.genders_i18n.invert, {}, class: "form-control", id: "user_gender" %>
+        </div>
       </div>
-      <div class="col-sm-1">
-       （姓）
-      </div>
-      <div class="col-sm-3">
-       <%= f.text_field :last_name %>
-      </div>
-      <div class="col-sm-1">
-       （名）
-      </div>
-      <div class="col">
-       <%= f.text_field :first_name %>
-      </div>
-     </div>
 
-     <div class="row mt-2">
-      <div class="col-sm-4">
-       お写真
+      <div class="form-group row mt-2">
+        <div class="col-sm-6">
+          <label for="user_birthday">生年月日</label>
+          <%= f.date_select :birthday, { start_year: 1950, end_year: 2020, include_blank: true, use_two_digit_numbers: true }, class: "form-control", id: "user_birthday" %>
+        </div>
+        <% if @user.group.present? %>
+          <div class="col-sm-6">
+            <label for="user_group">団体名</label>
+            <%= f.text_field :group, class: "form-control", id: "user_group" %>
+          </div>
+        <% end %>
       </div>
-      <div class="col-sm-8">
-       <%= f.file_field :image, accept: "image/*" %>
-      </div>
-     </div>
 
-     <div class="row mt-2">
-      <div class="col-sm-4">
-       性別
+      <div class="form-group row mt-2">
+        <div class="col">
+          <label for="user_email">メールアドレス</label>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", id: "user_email" %>
+        </div>
       </div>
-      <div class="col-sm-8">
-       <%= f.select :gender, User.genders_i18n.invert, {} %>
-      </div>
-     </div>
 
-     <div class="row mt-2">
-      <div class="col-sm-4">
-       生年月日
+      <div class="form-group row mt-2">
+        <div class="col">
+          <label for="user_phone_number">電話番号（ハイフンなし）</label>
+          <%= f.text_field :phone_number, class: "form-control", id: "user_phone_number" %>
+        </div>
       </div>
-      <div class="col-sm-8">
-       <%= f.date_select :birthday, { start_year: 1950, end_year: 2020,
-                                      include_blank: true,
-                                      use_two_digit_numbers: true } %>
-      </div>
-     </div>
 
-    <% if @user.group.blank? %>
-    <% else %>
-     <div class="row mt-2">
-      <div class="col">
-       団体名
+      <div class="form-group row mt-2">
+        <div class="col">
+          <label for="user_postal_code">郵便番号（ハイフンなし）</label>
+          <%= f.text_field :postal_code, class: "form-control", id: "user_postal_code" %>
+        </div>
       </div>
-      <div class="col">
-       <%= f.text_field :group %>
-      </div>
-      <div class="col">
-      </div>
-     </div>
-    <% end %>
 
-     <div class="row mt-2">
-      <div class="col">
-       メールアドレス
+      <div class="form-group row mt-2">
+        <div class="col-sm-6">
+          <label for="user_prefecture_id">都道府県</label>
+          <%= f.select :prefecture_id, Prefecture.names, {}, class: "form-control", id: "user_prefecture_id" %>
+        </div>
+        <div class="col-sm-6">
+          <label for="user_address">市区町村　番地</label>
+          <%= f.text_field :address, class: "form-control", id: "user_address" %>
+        </div>
       </div>
-      <div class="col">
-       <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-      </div>
-      <div class="col">
-      </div>
-     </div>
 
-     <div class="row mt-2">
-      <div class="col">
-       電話番号（ハイフンなし）
+      <div class="form-group row mt-2">
+        <div class="col">
+          <label>興味のある種目 ※任意選択・複数回答</label>
+          <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
+        </div>
       </div>
-      <div class="col">
-       <%= f.text_field :phone_number %>
-      </div>
-      <div class="col">
-      </div>
-     </div>
 
-     <div class="row mt-2">
-      <div class="col">
-       郵便番号（ハイフンなし）
+      <div class="mt-3 text-center">
+        <%= f.submit "登録する", class: "w-25 btn btn-success" %>
       </div>
-      <div class="col">
-       <%= f.text_field :postal_code %>
-      </div>
-      <div class="col">
-      </div>
-     </div>
-
-     <div class="row mt-2">
-      <div class="col-sm-4">
-       都道府県
-      </div>
-      <div class="col-sm-8">
-       <%= f.select :prefecture_id, Prefecture.names %>
-      </div>
-     </div>
-
-     <div class="row mt-2">
-      <div class="col-sm-4">
-       市区町村　番地
-      </div>
-      <div class="col-sm-8">
-       <%= f.text_field :address, class: "hogehoge", size: "50x1" %>
-      </div>
-     </div>
-
-     <div class="row mt-2">
-      <div class="col-sm-4">
-       興味のある種目 ※任意選択・複数回答
-      </div>
-      <div class="col-sm-8">
-       <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
-      </div>
-     </div>
-
-     <div class="mt-3 text-center">
-      <%= f.submit "登録する", class: "w-25 btn btn-success" %>
-     </div>
     </div>
   <% end %>
 </div>
