--- a/app/views/public/events/edit.html.erb
+++ b/app/views/public/events/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
- <div class="col-sm-2 mt-4 ml-3 text-center table-secondary">イベント編集</div>
+ <div class="mt-4 mb-3 text-center"><h4>イベント編集</h4></div>
   <%= form_with model: @event, url: event_path, method: :patch do |f| %>
     <div class="mt-4">
 
@@ -110,9 +110,12 @@
       </div>
      </div>
 
-     <div class="mt-3 text-center">
-      <%= f.submit "編集する", class: "w-25 btn btn-success" %>
-     </div>
+      <div class="mt-4">
+        <div class="d-flex justify-content-between">
+          <%= f.submit "編集する", class: "w-25 btn btn-success" %>
+          <%= link_to "削除する", event_path(@event.id), method: :delete, class: "w-25 btn btn-danger" %>
+        </div>
+      </div>
     </div>
   <% end %>
 </div>
