--- a/app/views/public/events/index.html.erb
+++ b/app/views/public/events/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="mt-4 mb-3 text-center"><h4>イベント一覧</h4></div>
+ <div class="mt-4 mb-3 text-center"><h4>イベント一覧</h4></div>
 
   <div class="row">
     <div class="col-md-4 mt-5">
@@ -13,8 +13,8 @@
             <div class="form-group mx-sm-2 mb-2">
               <%= f.date_field :start_date, class: "form-control", placeholder: "日にちを選択", value: Date.today %>
             </div>
-            <div class="form-group mb-2">
-              <%= f.collection_check_boxes :category_ids, Category.all, :id, :name, {}, class: "form-check-input" %>
+            <div class="form-group">
+              <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
             </div>
             <div class="form-group mb-2">
               <%= f.submit "検索", class: "btn btn-primary" %>
@@ -28,9 +28,9 @@
       <div class="container mt-4">
         <div class="row">
           <% @events.each do |event| %>
-            <div class="col-md-12 mt-4">
+            <div class="col-md-12 mt-2 border">
               <div class="row">
-                <div class="col-md-4">
+                <div class="col">
                   <%= link_to event_path(event.id) do %>
                     <% if event.image.attached? %>
                       <%= image_tag event.image, size: "250x250" %>
@@ -39,7 +39,7 @@
                     <% end %>
                   <% end %>
                 </div>
-                <div class="col-md-8">
+                <div class="col mt-2">
                   <div class="ml-1 mt-1"><%= link_to event.name, event_path(event.id) %></div>
                   <% event.event_categories.each do |ec| %>
                     <div class="ml-1 mt-1"><%= ec.category.name %></div>
@@ -61,5 +61,6 @@
         </div>
       </div>
     </div>
+
   </div>
 </div>
