--- a/app/views/public/reservations/new.html.erb
+++ b/app/views/public/reservations/new.html.erb
@@ -1,71 +1,69 @@
-<div class="container">
-  <div class="mt-5 ml-3 text-center">
+<div class="container mt-5">
+  <div class="text-center">
     <h4>イベント詳細</h4>
   </div>
 
-  <div class="container mt-4">
-    <div class="row justify-content-center">
-      <div class="col-md-8 mt-4">
-        <div class="row">
-          <!-- イベント写真 -->
-          <div class="col-md-4">
+  <div class="row justify-content-center mt-4">
+    <div class="col-md-8">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="text-center">
             <% if @event.image.attached? %>
-              <%= image_tag @event.image, size: "250x250", class: "img-fluid" %>
+              <%= image_tag @event.image, size: "250x250", class: "img-fluid rounded" %>
             <% else %>
-              <%= image_tag 'no_image', size: "250x250", class: "img-fluid" %>
+              <%= image_tag 'no_image', size: "250x250", class: "img-fluid rounded" %>
             <% end %>
           </div>
-          <!-- イベント詳細情報 -->
-          <div class="col-md-8">
-            <div class="mt-1"><%= @event.name %></div>
-            <div class="event-categories">
-              <% @event.event_categories.each do |ec| %>
-                <div class="event-category"><%= ec.category.name %></div>
-              <% end %>
-            </div>
-            <div class="mt-1">開催日時：<%= @event.date %></div>
-            <div class="mt-1">開催地：<%= Prefecture.names.invert[@event.prefecture_id] %> <%= @event.place %></div>
-            <div class="mt-1">募集人数：<%= @event.number %>人</div>
-            <div class="mt-1">参加料金：<%= @event.fee %>円</div>
-            <div class="mt-1">お支払い方法：<%= @event.how_to_pay_i18n %></div>
-          </div>
         </div>
-
-        <!-- イベント概要 -->
-        <div class="text-center mt-4">
-          <div class="event-outline"><概要></div>
-          <div class="mt-1"><%= @event.outline %></div>
+        <div class="col-md-8">
+          <div class="mb-2"><%= @event.name %></div>
+          <div class="event-categories">
+            <% @event.event_categories.each do |ec| %>
+              <span class="badge badge-primary mr-2"><%= ec.category.name %></span>
+            <% end %>
+          </div>
+          <div class="mt-2">開催日時：<%= @event.date %></div>
+          <div class="mt-2">開催地：<%= Prefecture.names.invert[@event.prefecture_id] %> <%= @event.place %></div>
+          <div class="mt-2">募集人数：<%= @event.number %>人</div>
+          <div class="mt-2">参加料金：<%= @event.fee %>円</div>
+          <div class="mt-2">お支払い方法：<%= @event.how_to_pay_i18n %></div>
         </div>
       </div>
-    </div>
 
-    <!-- 予約フォーム -->
-    <div class="mt-4">
-      <%= form_with model: @reservation, url: event_reservations_path, method: :post do |f| %>
-        <p>予約可能な人数: <%= @event.available_numbers %></p>
+      <div class="text-center mt-4">
+        <h5>概要</h5>
+        <div class="event-outline"><%= @event.outline %></div>
+      </div>
 
+      <div class="mt-4">
         <% if @event.available_numbers > 0 %>
-          <div class="form-group">
-            <%= f.label :reserved_number, "予約人数" %>
-            <div class="input-group">
-              <%= f.number_field :reserved_number, min: 1, value: 1 %>
-              <div class="input-group-append">
-                <span class="input-group-text">人</span>
+          <div class="alert alert-success">
+            予約可能な人数: <%= @event.available_numbers %>
+          </div>
+          <%= form_with model: @reservation, url: event_reservations_path, method: :post do |f| %>
+            <div class="form-group">
+              <%= f.label :reserved_number, "予約人数" %>
+              <div class="input-group">
+                <%= f.number_field :reserved_number, min: 1, value: 1, class: "form-control" %>
+                <div class="input-group-append">
+                  <span class="input-group-text">人</span>
+                </div>
               </div>
             </div>
-          </div>
-          <%= f.hidden_field :event_id, value: @event.id %>
-          <%= f.hidden_field :date, value: @event.date %>
-          <%= f.submit "予約する", class: "btn btn-success" %>
+            <%= f.hidden_field :event_id, value: @event.id %>
+            <%= f.hidden_field :date, value: @event.date %>
+            <%= f.submit "予約する", class: "btn btn-success btn-block" %>
+          <% end %>
         <% else %>
-          <p class="text-danger">満員のため受付は終了しました。たくさんのご応募ありがとうございました。</p>
+          <div class="alert alert-danger">
+            満員のため受付は終了しました。たくさんのご応募ありがとうございました。
+          </div>
         <% end %>
-      <% end %>
-    </div>
+      </div>
 
-    <!-- 戻るボタン -->
-    <div class="mt-4">
-      <%= link_to "戻る", events_path, class: "btn btn-secondary" %>
+      <div class="mt-4">
+        <%= link_to "戻る", events_path, class: "btn btn-secondary btn-block" %>
+      </div>
     </div>
   </div>
 </div>
