--- a/app/views/public/events/index.html.erb
+++ b/app/views/public/events/index.html.erb
@@ -14,7 +14,7 @@
               <%= f.date_field :start_date, class: "form-control", placeholder: "日にちを選択", value: Date.today %>
             </div>
             <div class="form-group">
-              <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
+              <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %><br>
             </div>
             <div class="form-group mb-2">
               <%= f.submit "検索", class: "btn btn-primary" %>
