--- a/app/views/public/events/new.html.erb
+++ b/app/views/public/events/new.html.erb
@@ -24,6 +24,10 @@
             </div>
 
             <div class="form-group">
+              <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
+            </div>
+
+            <div class="form-group">
               <%= f.label :image, "会場イメージ" %>
               <%= f.file_field :image, class: "form-control-file", accept: "image/*" %>
             </div>
